--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="font-sans antialiased">
     <div class="min-h-screen bg-gray-900">
-        <app-navbar></app-navbar>
+        <app-navbar *ngIf="session"></app-navbar>
         <router-outlet></router-outlet>
     </div>
 </div>
