--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,6 +19,10 @@
             class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-900 transition duration-150 ease-in-out border-b-2 border-transparent dark:text-gray-200 focus:outline-none">
             Admin
           </a>
+          <a routerLink="/login" routerLinkActive="border-gray-400" ariaCurrentWhenActive="page"
+            class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-900 transition duration-150 ease-in-out border-b-2 border-transparent dark:text-gray-200 focus:outline-none">
+            Login
+          </a>
         </div>
       </div>
 
