--- a/src/app/components/menu-profile/menu-profile.component.html
+++ b/src/app/components/menu-profile/menu-profile.component.html
@@ -1,52 +1,36 @@
 <div class="relative ml-3">
-  <div>
-      <span class="inline-flex rounded-md">
-          <button (click)="menuProfileHandler()" type="button"
-              class="inline-flex items-center px-3 py-2 text-sm font-medium leading-4 text-gray-200 transition duration-150 ease-in-out bg-gray-800 border border-transparent rounded-md hover:text-gray-200 hover:bg-gray-700 focus:outline-none focus:bg-gray-700 active:bg-gray-600">Autumn's
-              Team <svg class="ml-2 -mr-0.5 h-4 w-4" xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd"
-                      d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
-                      clip-rule="evenodd"></path>
-              </svg>
-          </button>
-      </span>
-  </div>
+    <div>
+        <span class="inline-flex rounded-md">
+            <button (click)="menuApiHandler()" type="button"
+                class="inline-flex items-center px-3 py-2 text-sm font-medium leading-4 text-gray-200 transition duration-150 ease-in-out bg-gray-800 border border-transparent rounded-md hover:bg-gray-700 hover:text-gray-200 focus:outline-none focus:bg-gray-700 active:bg-gray-600">
+                {{name}}
+                <svg class="ml-2 -mr-0.5 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                    fill="currentColor">
+                    <path fill-rule="evenodd"
+                        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                        clip-rule="evenodd"></path>
+                </svg>
+            </button>
+        </span>
+    </div><!-- Full Screen Dropdown Overlay -->
+    <div *ngIf="isOpenMenuApi" class="absolute right-0 z-50 w-48 mt-2 origin-top-right rounded-md shadow-lg">
+        <div class="py-1 bg-gray-700 rounded-md ring-1 ring-black ring-opacity-5">
+            <!-- Account Management -->
+            <div class="block px-4 py-2 text-xs text-gray-400"> Manage Account
+            </div>
+            <div>
+                <a class="block px-4 py-2 text-sm leading-5 text-gray-200 transition duration-150 ease-in-out hover:bg-gray-800 focus:outline-none focus:bg-gray-100"
+                    href="#">
+                    Profile
+                </a>
+            </div>
 
-  <div class="fixed inset-0 z-40" style="display: none;"></div>
-
-  <div *ngIf="isOpenMenuProfile" x-show="isOpen"
-      class="absolute right-0 z-50 mt-2 origin-top-right rounded-md shadow-lg">
-      <div class="py-1 bg-white rounded-md dark:bg-gray-700 ring-1 ring-black ring-opacity-5">
-          <div class="w-60">
-              <!-- Team Management -->
-              <div class="block px-4 py-2 text-xs text-gray-400"> Manage Team
-              </div><!-- Team Settings -->
-              <div><a class="block px-4 py-2 text-sm leading-5 text-gray-700 transition duration-150 ease-in-out dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 focus:outline-none focus:bg-gray-100"
-                      href="#"> Team Settings
-                  </a></div>
-              <div><a class="block px-4 py-2 text-sm leading-5 text-gray-700 transition duration-150 ease-in-out dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 focus:outline-none focus:bg-gray-100"
-                      href="#"> Create New
-                      Team </a></div>
-              <div class="border-t border-gray-100 dark:border-gray-600"></div>
-              <!-- Team Switcher -->
-              <div class="block px-4 py-2 text-xs text-gray-400"> Switch Teams
-              </div>
-              <form>
-                  <div><button type="submit"
-                          class="block w-full px-4 py-2 text-sm leading-5 text-left text-gray-700 transition duration-150 ease-in-out dark:text-gray-200 hover:bg-gray-100 dark:hover:bg-gray-800 focus:outline-none focus:bg-gray-100">
-                          <div class="flex items-center"><svg
-                                  class="w-5 h-5 mr-2 text-green-400" fill="none"
-                                  stroke-linecap="round" stroke-linejoin="round"
-                                  stroke-width="2" stroke="currentColor" viewBox="0 0 24 24">
-                                  <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z">
-                                  </path>
-                              </svg>
-                              <div>Autumn's Team</div>
-                          </div>
-                      </button></div>
-              </form>
-          </div>
-      </div>
-  </div>
+            <div class="border-t border-gray-600"></div>
+            <!-- Authentication -->
+            <button (click)="logout()"
+                class="block w-full px-4 py-2 text-sm leading-5 text-left text-gray-200 transition duration-150 ease-in-out hover:bg-gray-800 focus:outline-none focus:bg-gray-100">
+                Log Out
+            </button>
+        </div>
+    </div>
 </div>
