--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,4 @@
 <nav class="bg-gray-800 border-b border-gray-700">
-  <!-- Primary Navigation Menu -->
   <div class="px-4 mx-auto max-w-7xl sm:px-6 lg:px-8">
     <div class="flex justify-between h-16">
       <div class="flex">
@@ -9,31 +8,34 @@
             <img src="../assets/apmin.png" alt="apmin" class="w-10" />
           </a>
         </div>
-        <!-- Navigation Links -->
+
         <div class="hidden space-x-8 sm:-my-px sm:ml-10 sm:flex">
           <a routerLink="/home" routerLinkActive="border-gray-400" ariaCurrentWhenActive="page"
-            class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-900 transition duration-150 ease-in-out border-b-2 border-transparent dark:text-gray-200 focus:outline-none">
-            Home
+            class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-200 transition duration-150 ease-in-out border-b-2 border-transparent focus:outline-none hover:text-gray-400">
+            Inicio
           </a>
-          <a routerLink="/admin" routerLinkActive="border-gray-400" ariaCurrentWhenActive="page"
-            class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-900 transition duration-150 ease-in-out border-b-2 border-transparent dark:text-gray-200 focus:outline-none">
-            Admin
-          </a>
-          <a routerLink="/login" routerLinkActive="border-gray-400" ariaCurrentWhenActive="page"
-            class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-900 transition duration-150 ease-in-out border-b-2 border-transparent dark:text-gray-200 focus:outline-none">
-            Login
+          <a routerLink="/admin" routerLinkActive="border-gray-400" ariaCurrentWhenActive="page" *ngIf="authService.canActivate()"
+            class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-200 transition duration-150 ease-in-out border-b-2 border-transparent focus:outline-none hover:text-gray-400">
+            Envíos
           </a>
         </div>
+        
       </div>
 
-      <div class="hidden sm:flex sm:items-center sm:ml-6">
-        <app-menu-profile></app-menu-profile>
-        <app-menu-api></app-menu-api>
+      <div class="hidden sm:flex sm:items-center sm:ml-6" *ngIf="authService.canActivate()">
+        <app-menu-profile [name]="this.user?.name"></app-menu-profile>
       </div>
+      <div class="hidden sm:flex sm:items-center sm:ml-6" *ngIf="!authService.canActivate()">
+        <a routerLink="/login" routerLinkActive="border-gray-400" ariaCurrentWhenActive="page"
+        class="inline-flex items-center px-1 pt-1 text-sm font-medium leading-5 text-gray-200 transition duration-150 ease-in-out border-b-2 border-transparent focus:outline-none">
+        Iniciar Sesión
+      </a>       
+      </div>
+
 
       <div class="flex items-center -mr-2 sm:hidden">
         <button (click)="mobileMenuHandler()"
-          class="inline-flex items-center justify-center p-2 text-gray-400 transition duration-150 ease-in-out rounded-md dark:text-gray-200 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:bg-gray-100 dark:focus:bg-gray-700 focus:text-gray-500"><svg
+          class="inline-flex items-center justify-center p-2 text-gray-200 transition duration-150 ease-in-out rounded-md hover:text-gray-500 hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-gray-500"><svg
             class="w-6 h-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
             <path class="inline-flex" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="M4 6h16M4 12h16M4 18h16"></path>
@@ -46,52 +48,25 @@
   </div>
 
   <div *ngIf="mobileMenu" class="sm:hidden">
-    <div class="pt-4 pb-1 border-t border-gray-200 dark:border-gray-600">
+    <div class="pt-4 pb-1 border-t border-gray-600">
       <div class="flex items-center px-4">
         <div>
-          <div class="text-base font-medium text-gray-800 dark:text-gray-200">Autumn Ruiz </div>
-          <div class="text-sm font-medium text-gray-500 dark:text-gray-400"> hizevy@mailinator.com</div>
+          <div class="text-base font-medium text-gray-200">{{this.user?.name}}</div>
+          <div class="text-sm font-medium text-gray-400"> hizevy@mailinator.com</div>
         </div>
       </div>
       <div class="mt-3 space-y-1">
         <div>
-          <a class="block py-2 pl-3 pr-4 text-base font-medium text-gray-600 transition duration-150 ease-in-out border-l-4 border-transparent dark:text-gray-200 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300"
+          <a class="block py-2 pl-3 pr-4 text-base font-medium text-gray-200 transition duration-150 ease-in-out border-l-4 border-transparent hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300"
             href="#">
-            Profile
+            Perfil
           </a>
         </div>
-
         <button
-          class="block w-full py-2 pl-3 pr-4 text-base font-medium text-left text-gray-600 transition duration-150 ease-in-out border-l-4 border-transparent dark:text-gray-200 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300">
-          Log Out
+          class="block w-full py-2 pl-3 pr-4 text-base font-medium text-left text-gray-200 transition duration-150 ease-in-out border-l-4 border-transparent hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300">
+          Cerrar Sesión
         </button>
-
-        <div class="border-t border-gray-200 dark:border-gray-600"></div>
-
-        <div class="block px-4 py-2 text-xs text-gray-400"> Manage Team </div>
-        <!-- Team Settings -->
-        <div><a
-            class="block py-2 pl-3 pr-4 text-base font-medium text-gray-600 transition duration-150 ease-in-out border-l-4 border-transparent dark:text-gray-200 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300"
-            href="#">
-            Team Settings
-          </a></div>
-        <div><a
-            class="block py-2 pl-3 pr-4 text-base font-medium text-gray-600 transition duration-150 ease-in-out border-l-4 border-transparent dark:text-gray-200 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300"
-            href="#">
-            Create New Team
-          </a></div>
-        <div class="border-t border-gray-200 dark:border-gray-600"></div><!-- Team Switcher -->
-        <div class="block px-4 py-2 text-xs text-gray-400"> Switch Teams </div>
-        <button
-          class="block w-full py-2 pl-3 pr-4 text-base font-medium text-left text-gray-600 transition duration-150 ease-in-out border-l-4 border-transparent dark:text-gray-200 hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300">
-          <div class="flex items-center"><svg class="w-5 h-5 mr-2 text-green-400" fill="none" stroke-linecap="round"
-              stroke-linejoin="round" stroke-width="2" stroke="currentColor" viewBox="0 0 24 24">
-              <path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-            </svg>
-            <div>Autumn's Team</div>
-          </div>
-        </button>
-      </div>
+        </div>
     </div>
   </div>
 </nav>
