--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,135 +1,55 @@
 <main>
-  <div class="py-12">
-      <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
-          <div class="overflow-hidden bg-white shadow-xl dark:bg-gray-800 sm:rounded-lg">
-              <div>
-                  <div
-                      class="p-6 bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700 sm:px-20">
-                      <div class="flex flex-row items-center justify-center gap-2 font-bold text-white ">
-                        <img src="../assets/apmin.png" alt="apmin" class="w-10"/>
-                        apmin
-                      </div>
-                      <div class="mt-8 text-2xl dark:text-gray-200"> Welcome to your Jetstream
-                          application! </div>
-                      <div class="mt-6 text-gray-500 dark:text-gray-400"> Laravel Jetstream provides a
-                          beautiful, robust starting point for your next Laravel application. Laravel
-                          is designed to help you build your application using a development
-                          environment that is simple, powerful, and enjoyable. We believe you should
-                          love expressing your creativity through programming, so we have spent time
-                          carefully crafting the Laravel ecosystem to be a breath of fresh air. We
-                          hope you love it. </div>
-                  </div>
-                  <div class="grid grid-cols-1 bg-gray-200 bg-opacity-25 dark:bg-gray-800 md:grid-cols-2">
-                      <div class="p-6">
-                          <div class="flex items-center"><svg fill="none" stroke="currentColor"
-                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  viewBox="0 0 24 24" class="w-8 h-8 text-gray-400 dark:text-gray-200">
-                                  <path
-                                      d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
-                                  </path>
-                              </svg>
-                              <div
-                                  class="ml-4 text-lg font-semibold leading-7 text-gray-600 dark:text-gray-200">
-                                  <a href="https://laravel.com/docs">Documentation</a>
-                              </div>
-                          </div>
-                          <div class="ml-12">
-                              <div class="mt-2 text-sm text-gray-500 dark:text-gray-400"> Laravel has
-                                  wonderful documentation covering every aspect of the framework.
-                                  Whether you're new to the framework or have previous experience, we
-                                  recommend reading all of the documentation from beginning to end.
-                              </div><a href="https://laravel.com/docs">
-                                  <div
-                                      class="flex items-center mt-3 text-sm font-semibold text-indigo-700 dark:text-indigo-400 hover:underline">
-                                      <div>Explore the documentation</div>
-                                      <div class="ml-1 text-indigo-500"><svg viewBox="0 0 20 20"
-                                              fill="currentColor" class="w-4 h-4">
-                                              <path fill-rule="evenodd"
-                                                  d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                                                  clip-rule="evenodd"></path>
-                                          </svg></div>
-                                  </div>
-                              </a>
-                          </div>
-                      </div>
-                      <div
-                          class="p-6 border-t border-gray-200 dark:border-gray-700 md:border-t-0 md:border-l">
-                          <div class="flex items-center"><svg fill="none" stroke="currentColor"
-                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  viewBox="0 0 24 24" class="w-8 h-8 text-gray-400 dark:text-gray-200">
-                                  <path
-                                      d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z">
-                                  </path>
-                                  <path d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                              </svg>
-                              <div
-                                  class="ml-4 text-lg font-semibold leading-7 text-gray-600 dark:text-gray-200">
-                                  <a href="https://laracasts.com">Laracasts</a>
-                              </div>
-                          </div>
-                          <div class="ml-12">
-                              <div class="mt-2 text-sm text-gray-500 dark:text-gray-400"> Laracasts
-                                  offers thousands of video tutorials on Laravel, PHP, and JavaScript
-                                  development. Check them out, see for yourself, and massively level
-                                  up your development skills in the process. </div><a
-                                  href="https://laracasts.com">
-                                  <div
-                                      class="flex items-center mt-3 text-sm font-semibold text-indigo-700 dark:text-indigo-400 hover:underline">
-                                      <div>Start watching Laracasts</div>
-                                      <div class="ml-1 text-indigo-500"><svg viewBox="0 0 20 20"
-                                              fill="currentColor" class="w-4 h-4">
-                                              <path fill-rule="evenodd"
-                                                  d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                                                  clip-rule="evenodd"></path>
-                                          </svg></div>
-                                  </div>
-                              </a>
-                          </div>
-                      </div>
-                      <div class="p-6 border-t border-gray-200 dark:border-gray-700">
-                          <div class="flex items-center"><svg fill="none" stroke="currentColor"
-                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  viewBox="0 0 24 24" class="w-8 h-8 text-gray-400 dark:text-gray-200">
-                                  <path
-                                      d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
-                                  </path>
-                              </svg>
-                              <div
-                                  class="ml-4 text-lg font-semibold leading-7 text-gray-600 dark:text-gray-200">
-                                  <a href="https://tailwindcss.com/">Tailwind</a>
-                              </div>
-                          </div>
-                          <div class="ml-12">
-                              <div class="mt-2 text-sm text-gray-500 dark:text-gray-400"> Laravel
-                                  Jetstream is built with Tailwind, an amazing utility first CSS
-                                  framework that doesn't get in your way. You'll be amazed how easily
-                                  you can build and maintain fresh, modern designs with this wonderful
-                                  framework at your fingertips. </div>
-                          </div>
-                      </div>
-                      <div class="p-6 border-t border-gray-200 dark:border-gray-700 md:border-l">
-                          <div class="flex items-center"><svg fill="none" stroke="currentColor"
-                                  stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                  viewBox="0 0 24 24" class="w-8 h-8 text-gray-400 dark:text-gray-200">
-                                  <path
-                                      d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z">
-                                  </path>
-                              </svg>
-                              <div
-                                  class="ml-4 text-lg font-semibold leading-7 text-gray-600 dark:text-gray-200">
-                                  Authentication</div>
-                          </div>
-                          <div class="ml-12">
-                              <div class="mt-2 text-sm text-gray-500 dark:text-gray-400">
-                                  Authentication and registration views are included with Laravel
-                                  Jetstream, as well as support for user email verification and
-                                  resetting forgotten passwords. So, you're free to get started what
-                                  matters most: building your application. </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+    <div class="py-12">
+        <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+            <div class="overflow-hidden bg-gray-800 shadow-xl sm:rounded-lg">
+                <div>
+                    <div class="flex flex-row justify-between p-6 bg-gray-800 border-b border-gray-700 sm:px-20">
+                        <div class="flex flex-col">
+                            <div class="mt-2 text-2xl text-gray-200"> Lista de envíos </div>
+                            <div class="mt-4 text-gray-400"> Aca se listan tus envíos, segun el color es su estado </div>
+                        </div>
+                        <div class="self-center cursor-pointer" (click)="newSend()">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6 13h-5v5h-2v-5h-5v-2h5v-5h2v5h5v2z"/></svg>
+                        </div>
+                    </div>
+                    <div class="bg-gray-800 bg-opacity-25">
+
+                        <div class="p-6 border-t border-gray-700" *ngIf="createSend">
+                            <div class="ml-4 text-lg font-semibold leading-7 text-gray-200">
+                                Crear nuevo envío
+                            </div>
+                            <div class="ml-4">
+                                <div class="w-full mb-6">
+                                    <label for="title" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Titulo del envío</label>
+                                    <input [(ngModel)]="createSendTitle" type="text" id="title" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Titulo del envio" required>
+                                </div>
+                                <div class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300"> Pasos del envío </div>
+                                <div class="w-full mb-2" *ngFor="let step of createSendArray; index as i;">
+                                    <input [(ngModel)]="createSendArray[i].description" type="text" id="step{{i}}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Nombre del punto o paso {{i+1}}" required>
+                                </div>
+                                <div class="flex justify-center mb-2 text-sm font-medium text-gray-900 cursor-pointer dark:text-gray-300" (click)="addStep()">
+                                     <svg fill="white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6 13h-5v5h-2v-5h-5v-2h5v-5h2v5h5v2z"/></svg> 
+                                </div>
+                            </div>
+                            <div class="flex justify-end">
+                                <button type="submit" class="ml-4 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" (click)="createShip()">Submit</button>
+                            </div>
+                        </div>
+
+                        <div class="p-6 border-t border-gray-700">
+                            <div class="flex items-center">
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" class="w-8 h-8 text-gray-200">
+                                    <path d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
+                                    </path>
+                                </svg>
+                                <div class="ml-4 text-lg font-semibold leading-7 text-gray-200">
+                                    <a href="https://tailwindcss.com/">Titulo del envio</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
