--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,23 +1,19 @@
 <main class="flex items-center justify-center w-full min-h-screen mx-auto text-white bg-gray-900">
   <section class="flex w-[30rem] flex-col space-y-10">
-    <div class="text-4xl font-medium text-center">Log In</div>
+    <div class="text-4xl font-medium text-center">Iniciar Sesión</div>
 
     <div class="w-full text-lg duration-300 transform bg-transparent border-b-2 focus-within:border-gray-500">
-      <input type="text" placeholder="Email or Username"
-        class="w-full bg-transparent border-none outline-none placeholder:italic focus:outline-none" />
+      <input type="text" placeholder="Username" [(ngModel)]="name"
+        class="w-full bg-transparent border-none outline-none focus:outline-none" />
     </div>
 
     <div class="w-full text-lg duration-300 transform bg-transparent border-b-2 focus-within:border-gray-500">
-      <input type="password" placeholder="Password"
-        class="w-full bg-transparent border-none outline-none placeholder:italic focus:outline-none" />
+      <input type="password" [(ngModel)]="password" placeholder="Password" class="w-full bg-transparent border-none outline-none focus:outline-none" />
     </div>
 
-    <button class="py-2 font-bold duration-300 transform bg-gray-600 rounded-sm hover:bg-gray-400">
-      LOG IN
+    <button (click)="login()" class="py-2 font-bold duration-300 transform bg-gray-600 rounded-sm hover:bg-gray-400">
+      INICIAR SESIÓN
     </button>
-
-    <a href="#" class="font-semibold text-center text-gray-500 duration-300 transform hover:text-gray-300">FORGOT
-      PASSWORD?</a>
 
     <p class="text-lg text-center">
       No account?
