--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
 <main class="text-gray-400 bg-gray-900 body-font">
-    <div class="container flex flex-col items-center justify-center px-5 py-12 mx-auto">
-      <img class="object-cover object-center w-5/6 mb-10 rounded lg:w-2/6 md:w-3/6" alt="hero" src="../../../assets/apmin.png">
+    <div class="container flex flex-col items-center justify-center px-10 py-12 mx-auto">
+      <img class="object-cover object-center mb-10 rounded lg:w-2/6 md:w-3/6" alt="hero" src="../../../assets/apmin.png">
       <div class="flex flex-col items-center w-full mb-16 text-center md:w-2/3">
-        <h1 class="mb-4 text-3xl font-medium text-white title-font sm:text-4xl">Knausgaard typewriter readymade marfa</h1>
-        <p class="mb-8 leading-relaxed">Kickstarter biodiesel roof party wayfarers cold-pressed. Palo santo live-edge tumeric scenester copper mug flexitarian. Prism vice offal plaid everyday carry. Gluten-free chia VHS squid listicle artisan.</p>
+        <h1 class="mb-4 text-3xl font-medium text-white title-font sm:text-4xl">Apmin es una aplicación de envíos</h1>
+        <p class="mb-8 leading-relaxed">Esta aplicación esta en desarrollo pero es totalmente funcional y facil de usar, te creas una cuenta y ya podes crear envíos, y con solo compartir el link del envío, ya puedes ver el estado del envío</p>
       </div>
     </div>
   </main>
