--- a/src/app/components/menu-profile/menu-profile.component.html
+++ b/src/app/components/menu-profile/menu-profile.component.html
@@ -16,16 +16,15 @@
     <div *ngIf="isOpenMenuApi" class="absolute right-0 z-50 w-48 mt-2 origin-top-right rounded-md shadow-lg">
         <div class="py-1 bg-gray-700 rounded-md ring-1 ring-black ring-opacity-5">
             <!-- Account Management -->
-            <div class="block px-4 py-2 text-xs text-gray-400"> Manage Account
+            <!-- <div class="block px-4 py-2 text-xs text-gray-400"> Manage Account
             </div>
             <div>
                 <a class="block px-4 py-2 text-sm leading-5 text-gray-200 transition duration-150 ease-in-out hover:bg-gray-800 focus:outline-none focus:bg-gray-100"
                     href="#">
                     Profile
                 </a>
-            </div>
-
-            <div class="border-t border-gray-600"></div>
+            </div> -->
+            <!-- <div class="border-t border-gray-600"></div> -->
             <!-- Authentication -->
             <button (click)="logout()"
                 class="block w-full px-4 py-2 text-sm leading-5 text-left text-gray-200 transition duration-150 ease-in-out hover:bg-gray-800 focus:outline-none focus:bg-gray-100">
