--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -49,20 +49,27 @@
 
   <div *ngIf="mobileMenu" class="sm:hidden">
     <div class="pt-4 pb-1 border-t border-gray-600">
-      <div class="flex items-center px-4">
+      <div class="items-center px-4 ">
         <div>
-          <div class="text-base font-medium text-gray-200">{{this.user?.name}}</div>
-          <div class="text-sm font-medium text-gray-400"> hizevy@mailinator.com</div>
+          <div class="py-2 text-base font-medium text-gray-200">{{this.user?.name}}</div>
+          <div class="border-b-2 border-gray-500"></div>
         </div>
       </div>
       <div class="mt-3 space-y-1">
         <div>
-          <a class="block py-2 pl-3 pr-4 text-base font-medium text-gray-200 transition duration-150 ease-in-out border-l-4 border-transparent hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300"
-            href="#">
-            Perfil
+          <a routerLink="/home" ariaCurrentWhenActive="page"
+          class="block py-2 pl-3 pr-4 text-base font-medium text-gray-200 transition duration-150 ease-in-out border-l-4 border-transparent hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300">
+            Inicio
+          </a>
+        </div>
+        <div>
+          <a routerLink="/admin" ariaCurrentWhenActive="page" *ngIf="authService.canActivate()"
+          class="block py-2 pl-3 pr-4 text-base font-medium text-gray-200 transition duration-150 ease-in-out border-l-4 border-transparent hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300">
+            Envíos
           </a>
         </div>
         <button
+          (click)="logout()"
           class="block w-full py-2 pl-3 pr-4 text-base font-medium text-left text-gray-200 transition duration-150 ease-in-out border-l-4 border-transparent hover:text-gray-800 hover:bg-gray-50 hover:border-gray-300 focus:outline-none focus:text-gray-800 focus:bg-gray-50 focus:border-gray-300">
           Cerrar Sesión
         </button>
