--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <main class="flex items-center justify-center w-full min-h-screen mx-auto text-white bg-gray-900">
-  <section class="flex w-[30rem] flex-col space-y-10">
+  <section *ngIf="section == 'login'" class="flex w-[30rem] flex-col space-y-10">
     <div class="text-4xl font-medium text-center">Iniciar Sesión</div>
 
     <div class="w-full text-lg duration-300 transform bg-transparent border-b-2 focus-within:border-gray-500">
@@ -16,8 +16,30 @@
     </button>
 
     <p class="text-lg text-center">
-      No account?
-      <a href="#" class="font-medium text-gray-500 underline-offset-4 hover:underline">Create One</a>
+      ¿Sin cuenta?
+      <button (click)="sectionSwitch()" class="font-medium text-gray-500 underline-offset-4 hover:underline">Crear una</button>
+    </p>
+  </section>
+
+  <section *ngIf="section != 'login'" class="flex w-[30rem] flex-col space-y-10">
+    <div class="text-4xl font-medium text-center">Registrarse</div>
+
+    <div class="w-full text-lg duration-300 transform bg-transparent border-b-2 focus-within:border-gray-500">
+      <input type="text" placeholder="Username" [(ngModel)]="name"
+        class="w-full bg-transparent border-none outline-none focus:outline-none" />
+    </div>
+
+    <div class="w-full text-lg duration-300 transform bg-transparent border-b-2 focus-within:border-gray-500">
+      <input type="password" [(ngModel)]="password" placeholder="Password" class="w-full bg-transparent border-none outline-none focus:outline-none" />
+    </div>
+
+    <button (click)="register()" class="py-2 font-bold duration-300 transform bg-gray-600 rounded-sm hover:bg-gray-400">
+      REGISTRARSE
+    </button>
+
+    <p class="text-lg text-center">
+      ¿Ya tienes cuenta?
+      <button (click)="sectionSwitch()" class="font-medium text-gray-500 underline-offset-4 hover:underline">Iniciar Sesión</button>
     </p>
   </section>
 </main>
